# kkexpr

./: .gitignore  Makefile  README.md  build.py  setup.py
examples/: beginner.ipynb  benchmark_factors.py  compare_performance.py  factor_engine_demo.py  momentum_factors.py  real_data_benchmark.py  simple_factor_demo.py  technical_indicators.py  volatility_factors.py
src/datafeed/: __init__.py  dataloader.py  expr.py  factor_engine.py  metrics.py
src/datafeed/expr_functions/: __init__.py  expr_config.py  expr_exceptions.py  expr_unary_rolling.py  expr_utils.py  ts_stats.py  ts_unary.py
src/datafeed/rust_expr/: __init__.py
src/rust_expr/: Cargo.toml
src/rust_expr/src/: lib.rs
tests/: conftest.py
tests/datafeed/: test_metrics.py
tests/datafeed/expr_functions/: test_unary_rolling.py
